# MosamaticCLI

./: README.md  pyproject.toml  pyproject.toml.macos  pyproject.toml.windows  requirements-macos.txt  requirements-win.txt
archive/: README.md
archive/mosamatic/: utils.py
archive/mosamatic/commands/: calculatescores.py  copyfiles.py  segmentmusclefatl3.py
archive/mosamatic/tasks/copyfilestask/: copyfilestask.py
archive/mosamatic/tasks/createpngsfromsegmentationstask/: createpngsfromsegmentationstask.py
archive/mosamatic/tasks/rescaledicomfilestask/: rescaledicomfilestask.py
archive/mosamatic/tasks/segmentmusclefatl3task/: segmentmusclefatl3task.py
archive/scripts/: updatetoml.bat
archive/scripts/commands/: copyfiles.bat  createpngsfromsegmentations.bat  decompressdicomfiles.bat  runpipeline.bat
mosamatic/: logging.py  main.py  utils.py
mosamatic-cli/: pyproject.toml
mosamatic-cli/src/mosamatic/: logging.py
mosamatic-cli/src/mosamatic/commands/: selectslicefromscan.py
mosamatic-cli/src/mosamatic/pipelines/: pipeline.py
mosamatic-cli/src/mosamatic/tasks/: __init__.py  task.py
mosamatic-cli/src/mosamatic/tasks/calculatescorestask/: calculatescorestask.py
mosamatic-cli/src/mosamatic/tasks/decompressdicomfilestask/: decompressdicomfilestask.py
mosamatic-cli/src/mosamatic/tasks/segmentmusclefatl3tensorflowtask/: segmentmusclefatl3tensorflowtask.py
mosamatic-cli/src/mosamatic/tasks/selectslicefromscantask/: selectslicefromscantask.py
mosamatic-cli/tests/: test_pipeline.py  test_selectslicefromscan.py
mosamatic/commands/: calculatescores.py  createpngsfromsegmentations.py  decompress.py  decompressdicomfiles.py  dummy.py  rescale.py  rescaledicomfiles.py  runpipeline.py  segmentmusclefatl3.py  segmentmusclefatl3tensorflow.py  selectslicefromscan.py
mosamatic/pipelines/: __init__.py  defaultpipeline.py  pipeline.py
mosamatic/tasks/: __init__.py  decompress.py  decompressmulti.py  dummy.py  segmentmusclefatl3task.py  selectl3.py  task.py
mosamatic/tasks/calculatescorestask/: calculatescorestask.py
mosamatic/tasks/createpngsfromsegmentationstask/: createpngsfromsegmentationstask.py
mosamatic/tasks/decompressdicomfilestask/: decompressdicomfilestask.py
mosamatic/tasks/dummytask/: dummytask.py
mosamatic/tasks/rescaledicomfilestask/: rescaledicomfilestask.py
mosamatic/tasks/segmentmusclefatl3task/: segmentmusclefatl3task.py
mosamatic/tasks/segmentmusclefatl3tensorflowtask/: segmentmusclefatl3tensorflowtask.py
scripts/: activate.bat  build.bat  defaultpipeline.bat  deploy2pypi.bat  deploy2pypi.sh  install.bat  install.sh  run.bat  run.sh  test.bat  test.sh
scripts/commands/: calculatescores.bat  copyfiles.bat  rescaledicomfiles.bat  runpipeline.bat  segmentmusclefatl3.bat  segmentmusclefatl3tensorflow.bat
tests/: sources.py  test_calculatescores.py  test_createpngsfromsegmentations.py  test_decompress.py  test_decompressdicomfiles.py  test_decompressmulti.py  test_dummy.py  test_pipeline.py  test_rescale.py  test_segmentmusclefatl3.py  test_selectl3.py  test_selectslicefromscan.py  test_task.py  test_tasks.py
