[tool.poetry]
name = "mosamatic-cli-macos"
version = "1.6.1"
description = "A CLI tool for body composition analysis from DICOM CT scans (MacOS version)"
authors = ["Ralph Brecheisen <ralph.brecheisen@gmail.com>"]
license = "MIT"
readme = "README.md"
packages = [
    { include = "mosamatic", from = "." },
    { include = "models.py", from = "." },
]

[tool.poetry.dependencies]
python = ">=3.9,<3.12"
#click = "<8.1.8"
#pydicom = "*"
#numpy = "*"
#pandas = "^2.3"
#openpyxl = "^3.1"
#pendulum = "^3.1"
#pillow = "^11.0"
#python-gdcm = "^3.0"
#torch = "^2.7"
#torchvision = "^0.22"
#tensorboard = "2.15.2"
#tensorboard-data-server = "0.7.2"
#tensorflow = "2.15.0"
#tensorflow-macos = "2.15.0"
#tensorflow-estimator = "2.15.0"
#tensorflow-intel = "2.15.0"
#tensorflow-io-gcs-filesystem = "^0.31"
#scipy = "^1.1"

[tool.poetry.scripts]
mosamatic = "mosamatic.main:cli"

[tool.poetry.group.dev.dependencies]
pytest = "^8.4.1"

[tool.pytest.ini_options]
addopts = "-s"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"