[tool.poetry]
name = "mosamatic-cli-macos"
version = "1.6.1"
description = "A CLI tool for body composition analysis from DICOM CT scans (MacOS version)"
authors = ["Ralph Brecheisen <ralph.brecheisen@gmail.com>"]
license = "MIT"
readme = "README.md"
packages = [
    { include = "mosamatic", from = "." },
    { include = "models.py", from = "." },
]

[tool.poetry.dependencies]
python = ">=3.11,<3.12"

[tool.poetry.scripts]
mosamatic = "mosamatic.main:cli"

[tool.poetry.group.dev.dependencies]
pytest = "^8.4.1"

[tool.pytest.ini_options]
addopts = "-s"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"