[project]
name = "mosamatic-cli"
version = "0.1.0"
description = ""
authors = [
    {name = "Ralph Brecheisen", email = "r.brecheisen@maastrichtuniversity.nl"}
]
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
]

[tool.poetry]
packages = [{include = "mosamatic", from = "src"}]

[tool.poetry.scripts]
mosamatic-cli = "mosamatic.main:cli"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
