[project]
name = "mosamatic-cli"
version = "1.6.7"
description = ""
authors = [
    {name = "Ralph Brecheisen", email = "r.brecheisen@maastrichtuniversity.nl"}
]
readme = "README.md"
requires-python = ">=3.11,<3.12"
dependencies = [
    "click",
    "pydicom",
    "numpy",
    "pandas",
    "nibabel",
    "openpyxl",
    "pendulum",
    "pillow",
    "python-gdcm",
    "torch",
    "torchvision",
    "tensorflow==2.15.*; platform_system == 'Linux'",
    "tensorflow-intel==2.15.0; platform_system == 'Windows'",
    "tensorflow-macos==2.15.0; platform_system == 'Darwin' and platform_machine == 'arm64'",
    "tensorboard==2.15.2",
    "tensorboard-data-server==0.7.2",
    "tensorflow-io-gcs-filesystem==0.31.0",
    "scipy",
    "totalsegmentator",
]

[tool.poetry]
packages = [
    {include = "mosamatic", from = "src"},
    { include = "models.py", from = "src" },
]

[tool.poetry.scripts]
mosamatic-cli = "mosamatic.main:cli"

[tool.poetry.group.dev.dependencies]
pytest = "^8.4.1"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
